# gong-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
src/gong_mcp/: __init__.py  server.py
